# expert-system-malnutrition

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  knowledge_base.md  main.py  pyproject.toml
backend/: Dockerfile  cbr_engine.py  hybrid_engine.py  main.py  rbr_engine.py
backend/data/: case_base.json  rules.json  symptom_weights.json
backend/models/: __init__.py  schemas.py
frontend/: Dockerfile  app.py  package-lock.json  package.json
frontend/app/: app-header.tsx  diagnosis-panel.tsx  globals.css  layout.tsx  page-shell.tsx  page.tsx  smooth-scroll-provider.tsx
frontend/app/api/: proxy.ts
frontend/app/api/cases/: route.ts
frontend/app/api/diagnose/: route.ts
frontend/app/api/symptoms/: route.ts
frontend/app/diagnose/: page.tsx
tests/: test_cbr.py  test_hybrid.py  test_rbr.py
